@@ -2437,6 +2437,15 @@
          "hta"
       ]
    },
+   "Harshil Ratnu" : {
+      "emails" : [
+         "harshil.sratnu@gmail.com"
+      ],
+      "expertise" : "Web Inspector",
+      "nicks" : [
+         "harshil"
+      ]
+   },
    "Hayato Ito" : {
       "emails" : [
          "hayato@chromium.org"
