@@ -1,3 +1,12 @@
+2021-07-06  Harshil Ratnu  <hratnu@apple.com>
+
+        Add myself (Harshil Ratnu) to contributors.json
+        https://bugs.webkit.org/show_bug.cgi?id=227653
+
+        Reviewed by Devin Rousso.
+
+        * Scripts/webkitpy/common/config/contributors.json: Added myself.
+
 2021-07-06  Alex Christensen  <achristensen@webkit.org>
 
         loadSimulatedRequest: should do same delegate callbacks as loadHTMLString and loadData
